--- a/index.html
+++ b/index.html
@@ -424,12 +424,7 @@
                   href="https://etherscan.io/tx/0x386dd2467a249505b5164339121cb57d3b42ae87c6c3878a2d36f9d1da8a2ec5"
                   class="btn btn-round btn-primary btnold"
                   style="margin: 0 5px;"
-                  >Do Fot Fade<em
-                  class="fas fa-paper-plane animated"
-                  data-animate="fadeInUp"
-                  data-delay="0.5"
-                  style="background: transparent"
-                ></em></a
+                  >Do Fot Fade</a
                 >
              
               </div>
